@@ -1,4 +1,5 @@
 import io.opentelemetry.gradle.OtelJavaExtension
+import org.gradle.api.JavaVersion
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
@@ -33,7 +34,7 @@ tasks.withType<AbstractArchiveTask>().configureEach {
 
 java {
   toolchain {
-    languageVersion.set(JavaLanguageVersion.of(17))
+    languageVersion.set(JavaLanguageVersion.of(21))
   }
 
   withJavadocJar()
@@ -42,7 +43,7 @@ java {
 
 checkstyle {
   configDirectory.set(file("$rootDir/buildscripts/"))
-  toolVersion = "10.21.0"
+  toolVersion = "13.0.0"
   isIgnoreFailures = false
   configProperties["rootDir"] = rootDir
 }
@@ -66,6 +67,7 @@ dependencyCheck {
     "jmhRuntimeOnly")
   failBuildOnCVSS = 7.0f // fail on high or critical CVE
   analyzers.assemblyEnabled = false // not sure why its trying to analyze .NET assemblies
+  nvd.apiKey = System.getenv("NVD_API_KEY")
 }
 
 val testJavaVersion = gradle.startParameter.projectProperties.get("testJavaVersion")?.let(JavaVersion::toVersion)
@@ -73,7 +75,7 @@ val testJavaVersion = gradle.startParameter.projectProperties.get("testJavaVersi
 tasks {
   withType<JavaCompile>().configureEach {
     with(options) {
-      release.set(8)
+      release.set(otelJava.minJavaVersionSupported.map { it.majorVersion.toInt() })
 
       if (name != "jmhCompileGeneratedClasses") {
         compilerArgs.addAll(
@@ -87,6 +89,8 @@ tasks {
             "-Xlint:-processing",
             // We suppress the "options" warning because it prevents compilation on modern JDKs
             "-Xlint:-options",
+            "-Xlint:-serial",
+            "-Xlint:-this-escape",
             // Fail build on any warning
             "-Werror",
           ),
@@ -105,12 +109,12 @@ tasks {
   withType<Test>().configureEach {
     useJUnitPlatform()
 
-    if (testJavaVersion != null) {
-      javaLauncher.set(
-        javaToolchains.launcherFor {
-          languageVersion.set(JavaLanguageVersion.of(testJavaVersion.majorVersion))
-        },
-      )
+    val defaultMaxRetries = if (System.getenv().containsKey("CI")) 2 else 0
+    val maxTestRetries = gradle.startParameter.projectProperties["maxTestRetries"]?.toInt() ?: defaultMaxRetries
+
+    develocity.testRetry {
+      // You can see tests that were retried by this mechanism in the collected test reports and build scans.
+      maxRetries.set(maxTestRetries);
     }
 
     testLogging {
@@ -163,18 +167,32 @@ tasks {
   }
 }
 
+afterEvaluate {
+  tasks.withType<Test>().configureEach {
+    if (testJavaVersion != null) {
+      javaLauncher.set(
+        javaToolchains.launcherFor {
+          languageVersion.set(JavaLanguageVersion.of(testJavaVersion.majorVersion))
+        }
+      )
+      isEnabled = isEnabled && testJavaVersion >= otelJava.minJavaVersionSupported.get()
+    }
+  }
+}
+
 // Add version information to published artifacts.
 plugins.withId("otel.publish-conventions") {
   tasks {
     register("generateVersionResource") {
       val moduleName = otelJava.moduleName
       val propertiesDir = moduleName.map { File(layout.buildDirectory.asFile.get(), "generated/properties/${it.replace('.', '/')}") }
+      val versionProperty = project.version.toString()
 
-      inputs.property("project.version", project.version.toString())
+      inputs.property("project.version", versionProperty)
       outputs.dir(propertiesDir)
 
       doLast {
-        File(propertiesDir.get(), "version.properties").writeText("sdk.version=${project.version}")
+        File(propertiesDir.get(), "version.properties").writeText("sdk.version=${versionProperty}")
       }
     }
   }
@@ -196,7 +214,10 @@ configurations.configureEach {
 val dependencyManagement by configurations.creating {
   isCanBeConsumed = false
   isCanBeResolved = false
-  isVisible = false
+}
+
+val mockitoAgent by configurations.creating {
+  extendsFrom(dependencyManagement)
 }
 
 dependencies {
@@ -208,6 +229,8 @@ dependencies {
       }
     }
   }
+
+  mockitoAgent("org.mockito:mockito-core")
 
   compileOnly("com.google.auto.value:auto-value-annotations")
   compileOnly("com.google.code.findbugs:jsr305")
@@ -229,6 +252,8 @@ dependencies {
 
 testing {
   suites.withType(JvmTestSuite::class).configureEach {
+    useJUnitJupiter()
+
     dependencies {
       implementation(project(project.path))
 
@@ -238,8 +263,6 @@ testing {
       compileOnly("com.google.errorprone:error_prone_annotations")
       compileOnly("com.google.code.findbugs:jsr305")
 
-      implementation("org.junit.jupiter:junit-jupiter-api")
-      implementation("org.junit.jupiter:junit-jupiter-params")
       implementation("nl.jqno.equalsverifier:equalsverifier")
       implementation("org.mockito:mockito-core")
       implementation("org.mockito:mockito-junit-jupiter")
@@ -248,7 +271,6 @@ testing {
       implementation("org.junit-pioneer:junit-pioneer")
       implementation("io.github.netmikey.logunit:logunit-jul")
 
-      runtimeOnly("org.junit.jupiter:junit-jupiter-engine")
       runtimeOnly("org.slf4j:slf4j-simple")
     }
 
@@ -256,6 +278,19 @@ testing {
       all {
         testTask.configure {
           systemProperty("java.util.logging.config.class", "io.opentelemetry.internal.testing.slf4j.JulBridgeInitializer")
+
+          // Starting in java 21, dynamically attaching agents triggers warnings. Mockito depends on
+          // agents to redefine classes. Hence, on java 21+ we get warnings of the form:
+          //    WARNING: A Java agent has been loaded dynamically (/Users/jberg/.gradle/caches/modules-2/files-2.1/net.bytebuddy/byte-buddy-agent/1.12.19/450917cf3b358b691a824acf4c67aa89c826f67e/byte-buddy-agent-1.12.19.jar)
+          //    WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+          //    WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+          //    WARNING: Dynamic loading of agents will be disallowed by default in a future release
+          // To remove these warnings, we attach the byte-buddy-agent used by mockito directly.
+          val mockitoAgent: FileCollection = mockitoAgent
+          doFirst {
+            val mockitoAgentJar = mockitoAgent.files.single { it.name.contains("byte-buddy-agent")}
+            jvmArgs("-javaagent:${mockitoAgentJar}")
+          }
         }
       }
     }
